--- a/Actividades html/Actividad3.html
+++ b/Actividades html/Actividad3.html
@@ -39,5 +39,17 @@
         <li>Sábado</li>
         <li>Domingo</li>
     </ul>
+
+    <h2> b) Definiciones de la RAE </h2>
+    <dl>
+        <dt><strong> Comer </strong></dt>
+        <dd> asdbsaidauisvduasdas... </dd>
+
+        <dt><strong> Volar </strong></dt>
+        <dd> ashdbahdbadkjasda... </dd>
+
+        <dt><strong> Saltar </strong></dt>
+        <dd> ASKDBASHBDHJASJDASDA... </dd>
+    </dl>
 </body>
 </html>
