--- a/Actividades html/Actividad3.html
+++ b/Actividades html/Actividad3.html
@@ -40,7 +40,7 @@
         <li>Domingo</li>
     </ul>
 
-    <h2> b) Definiciones de la RAE </h2>
+    <h2> Definiciones de la RAE </h2>
     <dl>
         <dt><strong> Comer </strong></dt>
         <dd> asdbsaidauisvduasdas... </dd>
