--- a/Actividades html/Actividad6B.html
+++ b/Actividades html/Actividad6B.html
@@ -14,27 +14,19 @@
     </div>
 
     <div>
-        <p>
-        Lenguajes de marcas y sistemas de gestión de información
-        El módulo de Lenguajes de marcas es un módulo de 1º con una carga horaria de 3
-        horas semanales impartidas a lo largo de 3 trimestres.
-        Los contenidos del módulo son los siguientes:
-        1. Características de los lenguajes de marcas
-        2. Lenguajes para el almacenamiento y transmisión de información
-        3. El lenguaje XML
-        4. XPath y XQuery
-        5. El lenguaje JSON
-        6. El lenguaje Markdown
-        7. El lenguaje HTML 5
-        8. El lenguaje CSS3
-        9. El lenguaje de programación Javascript
-        </p>
-
-        <p><a href="Actividad6A.html">Volver a la pagina principal</p>
-            
+        <ul>
+            <li> Características de los lenguajes de marcas </li>
+            <li> Lenguajes para el almacenamiento y transmisión de información </li>
+            <li> El lenguaje XML </li>
+            <li> XPath y XQuery </li>
+            <li> El lenguaje JSON </li>
+            <li> El lenguaje Markdown </li>
+            <li> El lenguaje HTML 5 </li>
+            <li> El lenguaje CSS3 </li>
+            <li> El lenguaje de programación Javascript </li>
+        </ul>
+        <a href="Actividad6A.html"><p>Volver a la pagina principal</p>
     </div>
-   
-   
-
+            
 </body>
 </html>
