--- a/Actividades html/login.html
+++ b/Actividades html/login.html
@@ -14,7 +14,7 @@
     <label for="contrasena">Contraseña:</label><br>
     <input type="password" id="contrasena" name="contrasena"><br><br>
 
-    <button onclick="window.location.href='login.html'">Entrar</button>
+    <button>Entrar</button>
 
 </body>
 </html>
