--- a/Actividades html/login.html
+++ b/Actividades html/login.html
@@ -6,15 +6,15 @@
     <title>Login</title>
 </head>
 <body>
+    <form>
+        <h2>Login</h2>
+        <label for="usuario">Usuario:</label><br>
+        <input type="text" id="usuario" name="usuario"><br><br>
     
-    <h2>Login</h2>
-    <label for="usuario">Usuario:</label><br>
-    <input type="text" id="usuario" name="usuario"><br><br>
-
-    <label for="contrasena">Contraseña:</label><br>
-    <input type="password" id="contrasena" name="contrasena"><br><br>
-
-    <button>Entrar</button>
-
+        <label for="contrasena">Contraseña:</label><br>
+        <input type="password" id="contrasena" name="contrasena"><br><br>
+    
+        <button>Entrar</button>
+    </form>
 </body>
 </html>
