--- a/Actividades html/Actividad7.html
+++ b/Actividades html/Actividad7.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <form>
-        <label>Nombre:<input type="text" name="nombre"></label><br><br>
+        <label>Nombre:<input type="text" name="nombre" value="Marc"></label><br><br>
         
-        <label>Correo electrónico:<input type="email" name="email"></label><br><br>
+        <label>Correo electrónico:<input type="email" name="email" value="prueba@gmail.com"></label><br><br>
         
         <label>URL:<input type="url" name="url"></label><br><br>
         <label>Fecha:<input type="date" name="fecha"></label><br></br>
